force-app/main/default/objects/Case/fields/ActiveDirectory_Username__c.field-meta.xml
<CustomField>
    <fullName>ActiveDirectory_Username__c</fullName>
    <label>ActiveDirectory Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>