force-app/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>If( ISPICKVAL(Status, &apos;Closed&apos;),  
TEXT(Floor( ClosedDate  -  CreatedDate )) + &apos; Jour(s) - &apos;+ TEXT(Floor(MOD((ClosedDate   -  CreatedDate )*24,24)))+ &apos; Heures(s) - &apos;+ TEXT(Floor(MOD((ClosedDate   -  CreatedDate )*1440,60)))+ &apos; Minutes(s)&apos;
,
TEXT(Floor(  Create_Delay__c   /8 )) + &apos; Jour(s) - &apos;+ TEXT(Floor(MOD(( Create_Delay__c   /8 )*8,8)))+ &apos; Heures(s)&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>