force-app/main/default/objects/Case/fields/Assign_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_Date__c</fullName>
    <label>Assign Date</label>
    <type>DateTime</type>
</CustomField>