force-app/main/default/objects/Case/fields/Assignment_Delay__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Delay__c</fullName>
    <formula>8*((5*FLOOR((DATEVALUE(Now())-DATE(1900,1,8))/7) + MIN(5, MOD(DATEVALUE(Now())-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Now() -DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))) )) - (5*FLOOR((DATEVALUE(Assign_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(Assign_Date__c))&amp;&quot; 13:30:00&quot;)-Assign_Date__c,0))- DATE(1900,1,8))/7)+ MIN(5, MOD(DATEVALUE(Assign_Date__c+MAX(DATETIMEVALUE(TEXT(DATEVALUE(Assign_Date__c))&amp;&quot; 13:30:00&quot;)-Assign_Date__c,0))-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Assign_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(Assign_Date__c))&amp;&quot; 13:30:00&quot;)-Assign_Date__c,0)-DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment  Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>