force-app/main/default/objects/Case/fields/Assignment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Start_Time__c</fullName>
    <description>When a first-time case is assigned to a user except for createdby</description>
    <label>Assignment Start Time</label>
    <type>DateTime</type>
</CustomField>