force-app/main/default/objects/Case/fields/Balance_Type__c.field-meta.xml
<CustomField>
    <fullName>Balance_Type__c</fullName>
    <label>Balance Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>