force-app/main/default/objects/Case/fields/Buyout_End_Of_Term_Fee__c.field-meta.xml
<CustomField>
    <fullName>Buyout_End_Of_Term_Fee__c</fullName>
    <label>Buyout End Of Term Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>