force-app/main/default/objects/Case/fields/Buyout_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Rate__c</fullName>
    <label>Buyout Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>