force-app/main/default/objects/Case/fields/Buyout_Term__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Term__c</fullName>
    <label>Buyout Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>