force-app/main/default/objects/Case/fields/Buyout_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Total_Amount__c</fullName>
    <label>Buyout Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>