force-app/main/default/objects/Case/fields/Buyout_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Type__c</fullName>
    <label>Buyout Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>