force-app/main/default/objects/Case/fields/Contrat_InfoLease__c.field-meta.xml
<CustomField>
    <fullName>Contrat_InfoLease__c</fullName>
    <label>Contrat InfoLease</label>
    <length>50</length>
    <type>Text</type>
</CustomField>