force-app/main/default/objects/Case/fields/Create_Delay__c.field-meta.xml
<CustomField>
    <fullName>Create_Delay__c</fullName>
    <formula>8*((5*FLOOR((DATEVALUE(Now())-DATE(1900,1,8))/7) + MIN(5, MOD(DATEVALUE(Now())-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Now()-DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))) )) - (5*FLOOR((DATEVALUE(CreatedDate + MAX(DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate))&amp;&quot; 13:30:00&quot;)- CreatedDate,0))- DATE(1900,1,8))/7)+ MIN(5, MOD(DATEVALUE(CreatedDate + MAX(DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate))&amp;&quot; 13:30:00&quot;)- CreatedDate,0))-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(CreatedDate + MAX(DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate))&amp;&quot; 13:30:00&quot;)-CreatedDate,0)-DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>