force-app/main/default/objects/Case/fields/CreateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>CreateTimeValue__c</fullName>
    <label>CreateTimeValue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>