force-app/main/default/objects/Case/fields/CS_MailBox__c.field-meta.xml
<CustomField>
    <fullName>CS_MailBox__c</fullName>
    <label>CS MailBox</label>
    <type>TextArea</type>
</CustomField>