force-app/main/default/objects/Case/fields/CustId__c.field-meta.xml
<CustomField>
    <fullName>CustId__c</fullName>
    <label>Contract Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>