force-app/main/default/objects/Case/fields/Date_Buyout__c.field-meta.xml
<CustomField>
    <fullName>Date_Buyout__c</fullName>
    <label>Buyout Date</label>
    <type>Date</type>
</CustomField>