force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
                <isActive>false</isActive>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Accounts_Receivable</fullName>
                <isActive>false</isActive>
                <label>Accounts Receivable</label>
            </value>
            <value>
                <fullName>Admin Support CCS</fullName>
                <isActive>false</isActive>
                <label>Admin Support CCS</label>
            </value>
            <value>
                <fullName>Collection</fullName>
                <isActive>false</isActive>
                <label>Collection</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
                <isActive>false</isActive>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>Insurance_Claims</fullName>
                <isActive>false</isActive>
                <label>Insurance Claims</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Providers_Account</fullName>
                <isActive>false</isActive>
                <label>Providers Account</label>
            </value>
            <value>
                <fullName>Quittance</fullName>
                <isActive>false</isActive>
                <label>Quittance</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
                <isActive>false</isActive>
                <label>Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>