force-app/main/default/objects/Case/fields/Desciption_equipement__c.field-meta.xml
<CustomField>
    <fullName>Desciption_equipement__c</fullName>
    <label>Desciption equipement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>