force-app/main/default/objects/Case/fields/EIP_Exception__c.field-meta.xml
<CustomField>
    <fullName>EIP_Exception__c</fullName>
    <label>EIP Exception</label>
    <type>TextArea</type>
</CustomField>