force-app/main/default/objects/Case/fields/ExternalDocumentInfo1__c.field-meta.xml
<CustomField>
    <fullName>ExternalDocumentInfo1__c</fullName>
    <label>ExternalDocumentInfo1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>