force-app/main/default/objects/Case/fields/Langue_Communication__c.field-meta.xml
<CustomField>
    <fullName>Langue_Communication__c</fullName>
    <label>Langue Communication</label>
    <length>20</length>
    <type>Text</type>
</CustomField>