force-app/main/default/objects/Case/fields/Montant_Rachat__c.field-meta.xml
<CustomField>
    <fullName>Montant_Rachat__c</fullName>
    <label>Buyout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>