force-app/main/default/objects/Case/fields/Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile__c</fullName>
    <label>Owner Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>