force-app/main/default/objects/Case/fields/Pending_Actual_Time__c.field-meta.xml
<CustomField>
    <fullName>Pending_Actual_Time__c</fullName>
    <formula>8*((5*FLOOR((DATEVALUE(Now())-DATE(1900,1,8))/7) + MIN(5, MOD(DATEVALUE(Now())-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Now()-DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))) )) - (5*FLOOR((DATEVALUE(Pending_Start_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(Pending_Start_Date__c ))&amp;&quot; 13:30:00&quot;)- Pending_Start_Date__c,0))- DATE(1900,1,8))/7)+ MIN(5, MOD(DATEVALUE(Pending_Start_Date__c + MAX(DATETIMEVALUE(TEXT(DATEVALUE(Pending_Start_Date__c))&amp;&quot; 13:30:00&quot;)- Pending_Start_Date__c,0))-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Pending_Start_Date__c+ MAX(DATETIMEVALUE(TEXT(DATEVALUE(Pending_Start_Date__c))&amp;&quot; 13:30:00&quot;)-Pending_Start_Date__c,0)-DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Actual Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>