force-app/main/default/objects/Case/fields/Pending_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_End_Date__c</fullName>
    <label>Pending End Date</label>
    <type>DateTime</type>
</CustomField>