force-app/main/default/objects/Case/fields/Pending_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Start_Date__c</fullName>
    <label>Pending Start Date</label>
    <type>DateTime</type>
</CustomField>