force-app/main/default/objects/Case/fields/Pending_Status_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status_Start_Time__c</fullName>
    <label>Pending Status Start Time</label>
    <type>DateTime</type>
</CustomField>