force-app/main/default/objects/Case/fields/Pending_Time__c.field-meta.xml
<CustomField>
    <fullName>Pending_Time__c</fullName>
    <formula>IF(  ISPICKVAL(Status, &apos;Pending&apos;) , Pending_Actual_Time__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>