force-app/main/default/objects/Case/fields/Previous_Close_Case_User__c.field-meta.xml
<CustomField>
    <fullName>Previous_Close_Case_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Close Case User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>