force-app/main/default/objects/Case/fields/Processing_delay__c.field-meta.xml
<CustomField>
    <fullName>Processing_delay__c</fullName>
    <formula>IF( ISPICKVAL( Status , &apos;NEW&apos;) ,  (ClosedDate - CreatedDate)*24 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing delay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>