force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUYOUT</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
                <label>Grille de paiement</label>
            </value>
            <value>
                <fullName>MCC</fullName>
                <label>Modifications compte client</label>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>PREPAYH</fullName>
            </value>
            <value>
                <fullName>Régulières</fullName>
            </value>
            <value>
                <fullName>Renouvèlement</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Tiers</fullName>
            </value>
            <value>
                <fullName>VOID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>