force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd party agreement</fullName>
            </value>
            <value>
                <fullName>Account update</fullName>
            </value>
            <value>
                <fullName>Additionnal Debtor - Co-lessee</fullName>
            </value>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>Arrangement</fullName>
            </value>
            <value>
                <fullName>Assigment</fullName>
            </value>
            <value>
                <fullName>Auto-reply</fullName>
            </value>
            <value>
                <fullName>Banking Information</fullName>
            </value>
            <value>
                <fullName>Banko/ proposal</fullName>
            </value>
            <value>
                <fullName>Bill Of Sale</fullName>
            </value>
            <value>
                <fullName>Broker / Vendor</fullName>
            </value>
            <value>
                <fullName>Broker request</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Buyout - Audit</fullName>
            </value>
            <value>
                <fullName>Cash application</fullName>
            </value>
            <value>
                <fullName>Change payment date</fullName>
            </value>
            <value>
                <fullName>Cheque received</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Claim Info</fullName>
            </value>
            <value>
                <fullName>Collection Letters - NOC</fullName>
            </value>
            <value>
                <fullName>Collection Letters</fullName>
            </value>
            <value>
                <fullName>Collection Agencies - Assignation</fullName>
            </value>
            <value>
                <fullName>Collection release</fullName>
            </value>
            <value>
                <fullName>Communication with broker</fullName>
            </value>
            <value>
                <fullName>Contract Copy</fullName>
            </value>
            <value>
                <fullName>Contract information</fullName>
            </value>
            <value>
                <fullName>Copy of POI</fullName>
            </value>
            <value>
                <fullName>Corporate merger</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>