force-app/main/default/objects/Case/fields/Support_Topic__c.field-meta.xml
<CustomField>
    <fullName>Support_Topic__c</fullName>
    <description>Vendor portal support request topics</description>
    <label>Support Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General feedback</fullName>
            </value>
            <value>
                <fullName>Logging into my account</fullName>
            </value>
            <value>
                <fullName>Adding or removing users</fullName>
            </value>
            <value>
                <fullName>My account</fullName>
            </value>
            <value>
                <fullName>Suggest a new feature</fullName>
            </value>
            <value>
                <fullName>A technical issue</fullName>
            </value>
            <value>
                <fullName>Get training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>