force-app/main/default/objects/Case/fields/Taxe_Rachat_Federal__c.field-meta.xml
<CustomField>
    <fullName>Taxe_Rachat_Federal__c</fullName>
    <label>Buyout Taxes Federal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>