force-app/main/default/objects/Case/fields/Transfer_to_third_party__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_third_party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer to third party</label>
    <type>Checkbox</type>
</CustomField>