force-app/main/default/objects/Case/recordTypes/Accounts_Receivable.recordType-meta.xml
<RecordType>
    <fullName>Accounts_Receivable</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Accounts Receivable Cases</description>
    <label>Accounts Receivable</label>
</RecordType>