force-app/main/default/objects/Case/recordTypes/Admin_Support_CCS.recordType-meta.xml
<RecordType>
    <fullName>Admin_Support_CCS</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Admin Support CCS Cases</description>
    <label>Admin Support CCS</label>
</RecordType>