force-app/main/default/objects/Case/recordTypes/Collection.recordType-meta.xml
<RecordType>
    <fullName>Collection</fullName>
    <active>false</active>
    <businessProcess>Internal</businessProcess>
    <description>Record Type specific for Origin Email to Collection Queue</description>
    <label>Collection</label>
</RecordType>