force-app/main/default/objects/Case/recordTypes/Collections.recordType-meta.xml
<RecordType>
    <fullName>Collections</fullName>
    <active>true</active>
    <businessProcess>Internal</businessProcess>
    <description>Record Type specific for Origin Email to Collection Queue</description>
    <label>Collections</label>
</RecordType>