force-app/main/default/objects/Case/recordTypes/Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Origin Email to Customer Service Queue</description>
    <label>Customer Service</label>
</RecordType>