force-app/main/default/objects/Case/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <businessProcess>Internal</businessProcess>
    <description>Default Record Type for Origin Phone and Web</description>
    <label>Default</label>
</RecordType>