force-app/main/default/objects/Case/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Insurance Cases</description>
    <label>Insurance</label>
</RecordType>