force-app/main/default/objects/Case/recordTypes/Insurance_Claims.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Claims</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Insurance Claim Cases</description>
    <label>Insurance Claims</label>
</RecordType>