force-app/main/default/objects/Case/recordTypes/Litigation.recordType-meta.xml
<RecordType>
    <fullName>Litigation</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Litigation Case</description>
    <label>Litigation</label>
</RecordType>