force-app/main/default/objects/Case/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <businessProcess>Internal</businessProcess>
    <label>Sales</label>
</RecordType>