force-app/main/default/objects/Case/recordTypes/Security_Doc.recordType-meta.xml
<RecordType>
    <fullName>Security_Doc</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Security Doc Case</description>
    <label>Security Doc</label>
</RecordType>