force-app/main/default/objects/Case/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Transfer Cases</description>
    <label>Transfer</label>
</RecordType>