force-app/main/default/objects/Case/recordTypes/Vendor_Portal.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Portal</fullName>
    <active>true</active>
    <businessProcess>External</businessProcess>
    <description>Record Type specific for Vendor Portal support requests</description>
    <label>Vendor Portal</label>
</RecordType>