force-app/main/default/objects/Case/validationRules/Blocked_Auto_Reply_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocked_Auto_Reply_Email</fullName>
    <active>true</active>
    <description>Blocked Auto-Reply (Réponse Automatique) Email</description>
    <errorConditionFormula>OR (
CONTAINS(Subject , &apos;Auto Reply&apos;),

CONTAINS(Subject , &apos;Automatic reply&apos;),

CONTAINS(Subject , &apos;Réponse Automatique&apos;),

CONTAINS(Subject , &apos;Thank you for contacting our &apos;),

CONTAINS(Subject , &apos;Automatic reply&apos;),

CONTAINS( SuppliedEmail , &apos;noreply.serviceca@mhccna.com&apos;)


)</errorConditionFormula>
    <errorMessage>Auto Reply / Réponse Automatique</errorMessage>
</ValidationRule>