force-app/main/default/objects/Case/validationRules/Contact_selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_selection</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

ISPICKVAL(Origin , &apos;Email&apos;) ,
AND(
Contact.Email_Permanent__c != SuppliedEmail ,
NOT( ISBLANK( AccountId ) )
),
NOT(
OR(
CONTAINS( SuppliedEmail , &apos;hitachicapital&apos;),
CONTAINS( SuppliedEmail , &apos;clecapital&apos;)
)
)
)</errorConditionFormula>
    <errorMessage>Need Contact or Account validation</errorMessage>
</ValidationRule>