force-app/main/default/objects/Case/validationRules/Department_Controller.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_Controller</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Origin , &apos;Email&apos;),
ISPICKVAL( Type , &apos;Redirect To&apos;),
ISPICKVAL(Department__c, &quot;&quot;)

)</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>Select target Department before Case redirection</errorMessage>
</ValidationRule>