force-app/main/default/objects/Case/validationRules/Restrict_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Change_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   ISPICKVAL(Status, &apos;Closed&apos;), 
   PRIORVALUE(OwnerId ) &lt;&gt; $User.Id,
   BypassValidation__c = false
)</errorConditionFormula>
    <errorMessage>Can not changed Case owner</errorMessage>
</ValidationRule>