force-app/main/default/objects/Case/validationRules/Restrict_To_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_To_Closed</fullName>
    <active>false</active>
    <description>Restrict to close Case without Case Type</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &apos;Closed&apos;),
 ISPICKVAL(Type, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>You can not closed Case without Type.</errorMessage>
</ValidationRule>