force-app/main/default/objects/Case/listViews/Accounts_Receivable_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Accounts_Receivable_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Accounts Receivable Queue</label>
    <queue>Accounts_Receivable_Queue</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>Accounting_Agent</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>