force-app/main/default/objects/Case/listViews/Admin_Support_CCS_Case.listView-meta.xml
<ListView>
    <fullName>Admin_Support_CCS_Case</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Delay_color__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Admin Support CCS Queue</label>
    <queue>Admin_Support_CCS_Queue</queue>
    <sharedTo>
        <role>Collection_Manager</role>
        <roleAndSubordinatesInternal>Admin_CCS_Agent</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>